// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden Master — Bias Detection 3/3 simultaneous > EXECUTOR + 2 high signals → no trigger 1`] = `
{
  "label": "bias_drift_executor_2of3",
  "output": {
    "fired": [
      "whyTapRate_high",
      "summaryDwell_high",
    ],
    "trigger": false,
  },
}
`;

exports[`Golden Master — Bias Detection 3/3 simultaneous > EXECUTOR + 3 high signals → trigger 1`] = `
{
  "label": "bias_drift_executor_3of3",
  "output": {
    "fired": [
      "whyTapRate_high",
      "summaryDwell_high",
      "repRangeOverride_high",
    ],
    "trigger": true,
  },
}
`;

exports[`Golden Master — Bias Detection 3/3 simultaneous > STRATEGIC + 3 low signals → trigger 1`] = `
{
  "label": "bias_drift_strategic_3of3",
  "output": {
    "fired": [
      "whyTapRate_low",
      "summaryDwell_low",
      "repRangeOverride_low",
    ],
    "trigger": true,
  },
}
`;

exports[`Golden Master — Cascade Defense priority order > safety > recovery > progression > optimization 1`] = `
{
  "label": "cascade_arbitrate_full",
  "output": {
    "runnerUps": [
      "D",
      "A",
      "C",
    ],
    "winner": "B",
  },
}
`;

exports[`Golden Master — Composite Signal Layer (3/3 simultaneous threshold) > all clean — no trigger 1`] = `
{
  "label": "composite_signal_all_clean",
  "output": {
    "fired": [],
    "trigger": false,
  },
}
`;

exports[`Golden Master — Composite Signal Layer (3/3 simultaneous threshold) > lifecycle idle → flagged → cooldown → resolving → idle 1`] = `
{
  "label": "lifecycle_step1_flagged",
  "output": {
    "sessionsInState": 0,
    "status": "flagged",
  },
}
`;

exports[`Golden Master — Composite Signal Layer (3/3 simultaneous threshold) > lifecycle idle → flagged → cooldown → resolving → idle 2`] = `
{
  "label": "lifecycle_step2_cooldown",
  "output": {
    "sessionsInState": 0,
    "status": "cooldown",
  },
}
`;

exports[`Golden Master — Composite Signal Layer (3/3 simultaneous threshold) > lifecycle idle → flagged → cooldown → resolving → idle 3`] = `
{
  "label": "lifecycle_step4_resolving",
  "output": {
    "sessionsInState": 2,
    "status": "cooldown",
  },
}
`;

exports[`Golden Master — Composite Signal Layer (3/3 simultaneous threshold) > lifecycle idle → flagged → cooldown → resolving → idle 4`] = `
{
  "label": "lifecycle_step6_idle",
  "output": {
    "sessionsInState": 1,
    "status": "resolving",
  },
}
`;

exports[`Golden Master — Composite Signal Layer (3/3 simultaneous threshold) > one flag (only performance drop) — no trigger 1`] = `
{
  "label": "composite_signal_one_flag",
  "output": {
    "fired": [
      "performance_drop",
    ],
    "trigger": false,
  },
}
`;

exports[`Golden Master — Composite Signal Layer (3/3 simultaneous threshold) > three flags — trigger 1`] = `
{
  "label": "composite_signal_three_flags_trigger",
  "output": {
    "fired": [
      "performance_drop",
      "rest_time_excessive",
      "rir_mismatch",
    ],
    "trigger": true,
  },
}
`;

exports[`Golden Master — Composite Signal Layer (3/3 simultaneous threshold) > two flags — no trigger (3/3 strict) 1`] = `
{
  "label": "composite_signal_two_flags",
  "output": {
    "fired": [
      "performance_drop",
      "rest_time_excessive",
    ],
    "trigger": false,
  },
}
`;

exports[`Golden Master — Goal Shift Calibration (§36.35 + ADR_OUTLIER EXT-2) > GOAL_SHIFT_CALIBRATION_PLACEHOLDER LOCKED V1 wording 1`] = `
{
  "label": "goal_shift_placeholder_data",
  "output": {
    "body": "Primele 2 sesiuni sunt de calibrare · Estimăm 50-60 kg × 8 reps, ajustăm după ce avem date",
    "id": "goal_shift_calibration_notice",
    "subText": "Sesiunea 1/2",
    "title": "Recalibrăm pe noul obiectiv",
  },
}
`;

exports[`Golden Master — Goal Shift Calibration (§36.35 + ADR_OUTLIER EXT-2) > advancePostShiftSession lifecycle 1`] = `
{
  "label": "goal_shift_after_session_1",
  "output": {
    "calibrationActive": true,
    "calibrationSessionsRemaining": 1,
    "newGoal": "BULK",
    "previousGoal": "CUT",
    "sessionsSinceShift": 1,
    "streak": 0,
  },
}
`;

exports[`Golden Master — Goal Shift Calibration (§36.35 + ADR_OUTLIER EXT-2) > advancePostShiftSession lifecycle 2`] = `
{
  "label": "goal_shift_after_session_2",
  "output": {
    "calibrationActive": false,
    "calibrationSessionsRemaining": 0,
    "newGoal": "BULK",
    "previousGoal": "CUT",
    "sessionsSinceShift": 2,
    "streak": 0,
  },
}
`;

exports[`Golden Master — Goal Shift Calibration (§36.35 + ADR_OUTLIER EXT-2) > initiateGoalShift CUT → BULK 1`] = `
{
  "label": "goal_shift_init",
  "output": {
    "calibrationActive": true,
    "calibrationSessionsRemaining": 2,
    "newGoal": "BULK",
    "previousGoal": "CUT",
    "sessionsSinceShift": 0,
    "streak": 0,
  },
}
`;

exports[`Golden Master — Pain Discomfort Button (§36.38 + EXT-1 LOCKED V1) > 3 PAIN_OPTIONS exposed (general/specific/technical) 1`] = `
{
  "label": "pain_options_full",
  "output": [
    {
      "key": "discomfort_general",
      "label": "Mișcarea mă deranjează",
      "level": "general",
    },
    {
      "key": "discomfort_specific",
      "label": "Simt o tensiune ciudată",
      "level": "specific",
    },
    {
      "key": "doms_severe",
      "label": "DOMS sever",
      "level": "technical",
    },
  ],
}
`;

exports[`Golden Master — Pain Discomfort Button (§36.38 + EXT-1 LOCKED V1) > buildOverrideAuditEntry sets user_override_pain_redflag 1`] = `
{
  "label": "pain_override_entry",
  "output": {
    "exerciseName": "Squat",
    "painKey": "discomfort_specific",
    "user_override_pain_redflag": true,
  },
}
`;

exports[`Golden Master — Pain Discomfort Button (§36.38 + EXT-1 LOCKED V1) > processPainInput per key 1`] = `
{
  "label": "pain_input_discomfort_general",
  "output": {
    "action": "suggest_alternative",
    "rationale": "user_reported_general_discomfort",
  },
}
`;

exports[`Golden Master — Pain Discomfort Button (§36.38 + EXT-1 LOCKED V1) > processPainInput per key 2`] = `
{
  "label": "pain_input_discomfort_specific",
  "output": {
    "action": "reduce_volume",
    "rationale": "user_reported_specific_tension",
  },
}
`;

exports[`Golden Master — Pain Discomfort Button (§36.38 + EXT-1 LOCKED V1) > processPainInput per key 3`] = `
{
  "label": "pain_input_doms_severe",
  "output": {
    "action": "skip",
    "rationale": "user_reported_doms_severe",
  },
}
`;

exports[`Golden Master — Smart Routing Equipment (tier-aware filtering) > Tier 1 forță (Lat Pulldown) → strict force_demand: high 1`] = `
{
  "label": "smart_routing_tier1_lat_pulldown",
  "output": {
    "alternatives": [
      {
        "name": "Cable Row",
        "similarity": 6,
      },
    ],
    "shouldSkip": false,
  },
}
`;

exports[`Golden Master — Smart Routing Equipment (tier-aware filtering) > Tier 2 isolation (Lateral Raises) → muscle_target match flexibility 1`] = `
{
  "label": "smart_routing_tier2_lateral_raises",
  "output": {
    "alternatives": [
      {
        "name": "Lateral Raises (cable)",
        "similarity": 5,
      },
    ],
    "shouldSkip": false,
  },
}
`;

exports[`Golden Master — Smart Routing Equipment (tier-aware filtering) > Unknown exercise → shouldSkip = true 1`] = `
{
  "label": "smart_routing_unknown",
  "output": {
    "alternatives": [],
    "shouldSkip": true,
  },
}
`;
